# fastCatan

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  IMMUTABLE.md  LADDER_VERSION.md  PLAN.md  PRESENTATION_INPUT.md  README.md  environment.yml  node_gen.py  pyproject.toml  requirements.txt
DEBUG/: README.md
DEBUG/bench/: bench_comprehensive.py  bench_throughput.py
DEBUG/ui/: PLAN.md  recorder.py  replay.py
EVAL/AB/: README.md  REPRODUCIBILITY.md  mcts_policy.py  tournament.py  (+2 more)
examples/: alphabeta_player.py  random_player_test.py
include/: batched_env.hpp  obs.hpp  rules.hpp  search.hpp  state.hpp
ladder/: __init__.py  bridge_bots.py  calibrate.py  config.py  crosscheck_bridge.py  leakage_referee.py  match.py  oracles.py  persona.py  registry.py  results.py  run.py  seeds.py  stats.py  topology.py  view.py
models/: PLAN.md  ckpt.py  env.py  env_shaped.py  eval.py  train_a2c.py  train_dqn.py  train_muzero.py  train_ppo.py
results/: SCHEMA.md  bridge_crosscheck_v1.json  calibration_1.0-v1_smoke_1.0-v1-roundrobin-smoke-20260718T002500Z.json  calibration_1.0-v1_smoke_1.0-v1-roundrobin-smoke-20260718T002500Z.md  ladder.md  ladder.parquet  schema.py
scripts/: check_env.py  check_frozen.sh  gen_immutable_lock.sh  run_baseline_benchmark.sh  run_mixed_arms_local.sh  setup.sh  tournament.sh
tests/: fuzz_invariants.cpp  test_alphabeta.py  test_batched_trainer.py  test_determinism.py  test_invariants.py  test_mask.py  test_obs_full.py  test_phase2_baseline.py  test_scenarios.py  test_scenarios_advanced.py  test_smoke.py  test_state_mirror_layout.py  test_wiring.py
(+110 files in other folders)
