[build-system]
requires = ["scikit-build-core==0.12.2", "nanobind==2.12.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fastcatan"
version = "0.1.0"
description = "High-throughput Catan simulator with Python bindings"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "fastCatan" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
ladder = [
    "numpy>=1.26,<3",
    "pandas>=2.0,<4",
    "pyarrow>=16,<24",
    "wandb>=0.17,<1",
]

[tool.scikit-build]
minimum-version = "0.10"
cmake.version = ">=3.27"
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/fastcatan"]
# Reuse our top-level CMakeLists; SKBUILD flag enables the nanobind branch.
cmake.source-dir = "."

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.pytest.ini_options]
# "." resolves fastcatan/native helpers; "EVAL" lets `import bridge` / `import AB`
# (M4 eval under EVAL/); "DEBUG" lets `import ui` (debug viewer under DEBUG/ui).
pythonpath = [".", "EVAL", "DEBUG"]
# importlib mode: EVAL/bridge/tests and the root tests/ both ship __init__.py, so the
# legacy "prepend" importer maps both to a top-level `tests` package and they
# collide when collected together. importlib imports by path, no collision.
addopts = "--import-mode=importlib"
